done css for multipicant

--- a/MS-Projekat-3-main/app/pages/multiplier/style.css
+++ b/MS-Projekat-3-main/app/pages/multiplier/style.css
@@ -1,3 +1,146 @@
-body {
-    background-color: lightsteelblue;
+body{
+    display: grid;
+    justify-content: center;
+    background-color: rgb(234, 231, 231);
+}
+.conteiner{
+    background: linear-gradient(110deg, rgb(144, 144, 144) 60%, silver 60%);
+    width: 90vw;
+    height: 90vh;
+    margin: 1%;
+    border: solid 1px black;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+    ". . . . . . . "
+    ". multiplicant multiplicant . . . . "
+    ". . down-multiplicant . . . . "
+    ". alu alu  . multiplier multiplier . "
+    ". up-product down-alu . up down . "
+    ". product product left control control . "
+    ". . . . . . . "
+    ".  . undo . step . . "
+    ;
+}
+.multiplicant{
+    grid-area: multiplicant;
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    place-items: center;
+    flex-direction: column;
+    color: rgb(0, 0, 0);
+}
+.multiplier{
+    grid-area: multiplier;
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    place-items: center;
+    flex-direction: column;
+
+}
+.product{
+    grid-area: product;
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    flex-direction: column;
+
+}
+.control{
+    grid-area: control;
+    background-color:rgb(97, 95, 95);
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+    border-radius: 50%;
+    flex-direction: column;
+    
+}
+.alu{
+    grid-area: alu;
+    clip-path: polygon(49% 32%, 60% 0, 100% 0, 78% 100%, 25% 100%, 0 0, 36% 0);
+    width: 100%;
+    height: 100%; 
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+    margin: 0%;
+    padding: 0%;
+    }
+
+#do{
+    grid-area: step;
+    background-color: silver;
+    margin: 1rem 0 1rem 0;
+    border-radius: 1rem;
+}
+#undo{
+    grid-area: undo;
+    background-color: silver;
+    margin: 1rem 0 1rem 0;
+    border-radius: 1rem;
+}
+.left-control{
+    grid-area: left;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+.down-multipiler{
+    grid-area: down;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+
+.up{
+    grid-area: up;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+.left-alu{
+    grid-area: left;
+    height: 70%;
+    width: 100%;
+    margin-top: -30px;
+    margin-left: 10px;
+}
+.left-multiplicant{
+    grid-area: left;
+    height: 70%;
+    width: 100%;
+    margin-top: -70px;
+    transform: rotate(17deg);
+    margin-left: 40px;
+}
+.down-multiplicant{
+    grid-area: down-multiplicant;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+    
+    
+}
+.down-alu{
+    grid-area: down-alu;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+    
+}
+.up-product{
+    grid-area: up-product;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;   
+}
+
+p{
+    font-weight: 900;
 }
