--- a/style.css
+++ b/style.css
@@ -1,98 +1,36 @@
 body {
-    margin: 0;
-    padding: 0;
-    padding-top: 10rem;
-    display: flex;
-    justify-content: center;
-}
-
-#main {
-    flex: 0 0 70%;
-    width: 100vw;
-    height: 100vh;
-    margin: 0%;
-    padding: 1rem;
-    width: 50vw;
-    height: 90vh;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-areas:
-        ". . . . . . . "
-        ". multiplicant multiplicant . . . . "
-        ". . . . . . . "
-        ". alu alu  . multiplier multiplier . "
-        ". . . . . . . "
-        ". product product . control control . "
-        ". . . . . . . ";
-}
-
-.multiplicant {
-    grid-area: multiplicant;
-    border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    place-items: center;
-    align-items: center;
-}
-
-.multiplier {
-    grid-area: multiplier;
-    border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    place-items: center;
-    align-items: center;
-}
-
-.product {
-    grid-area: product;
-    border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    place-items: center;
-    align-items: center;
-}
-
-.control {
-    grid-area: control;
-    border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    place-items: center;
-    align-items: center;
-    border-radius: 50%;
-}
-
-.alu {
-    grid-area: alu;
-    clip-path: polygon(49% 32%, 60% 0, 100% 0, 78% 100%, 25% 100%, 0 0, 36% 0);
-    width: 100%;
-    height: 100%;
-    background-color: aqua;
-    display: flex;
-    justify-content: center;
-    place-items: center;
-    align-items: center;
-    margin: 0%;
-    padding: 0%;
-}
-
-.container {
+    justify-self: center;
     height: 100vh;
+    background-color: rgb(234, 231, 231);
+}
+.container{
+    
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;    
 }
 
 form {
+    width: 70vw;
+    height: 50vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-content: center;
     gap: 5rem;
     border: 1px solid black;
     padding: 10rem;
-    background: linear-gradient(110deg, #fdcd3b 60%, #ffed4b 60%);
+    background: linear-gradient(110deg, rgb(144, 144, 144) 60%, silver 60%);
+}
+.form-center{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
 }
 
 .form-group {
@@ -108,6 +46,10 @@ form {
 
 .form-button {
     padding: 0.5rem;
+    border-radius: .8em;
+}
+.form-button:hover{
+    background-color: rgb(79, 77, 77);
 }
 
 .input {
