--- a/pages/divider-optimized/style.css
+++ b/pages/divider-optimized/style.css
@@ -1,3 +1,190 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    background-color: lightsteelblue;
+    display: grid;
+    justify-content: center;
+    background-color: rgb(234, 231, 231);
+    padding: 0;
+    margin: 0;
+    background-color: lightgray;
+}
+
+.container {
+    display: flex;
+    gap: 16px;
+    padding: 16px;
+    width: 100vw;
+    height: 100vh;
+}
+
+.dividerContainer {
+    background: linear-gradient(110deg, rgb(144, 144, 144) 60%, silver 60%);
+    width: 80%;
+    height: 100%;
+    border: solid 1px black;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+        ". . . . . . . "
+        ". divisor divisor . . . . "
+        ". . down-multiplicant . . . . "
+        ". alu alu  . . . . "
+        ". up-product down-alu . up down . "
+        ". remainer remainer left control control . "
+        ". . . . . . . "
+        ".  . undo . step . . ";
+}
+
+.divisor {
+    grid-area: divisor;
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    place-items: center;
+    flex-direction: column;
+    color: rgb(0, 0, 0);
+}
+
+
+
+.remainder {
+    grid-area: remainer;
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    place-items: center;
+    flex-direction: column;
+}
+
+.control {
+    grid-area: control;
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+    border-radius: 50%;
+    flex-direction: column;
+}
+
+.alu {
+    grid-area: alu;
+    clip-path: polygon(49% 32%, 60% 0, 100% 0, 78% 100%, 25% 100%, 0 0, 36% 0);
+    width: 100%;
+    height: 100%;
+    background-color: rgb(97, 95, 95);
+    display: flex;
+    justify-content: center;
+    place-items: center;
+    align-items: center;
+    margin: 0%;
+    padding: 0%;
+}
+
+#do {
+    grid-area: step;
+    background-color: silver;
+    margin: 1rem 0 1rem 0;
+    border-radius: 1rem;
+}
+
+#undo {
+    grid-area: undo;
+    background-color: silver;
+    margin: 1rem 0 1rem 0;
+    border-radius: 1rem;
+}
+#do:hover, #undo:hover{
+    background-color: rgb(79, 77, 77);
+    border: 2px solid rgb(0, 0, 0);
+}
+.left-control {
+    grid-area: left;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+
+.down-multipiler {
+    grid-area: down;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+
+.up {
+    grid-area: up;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+
+.left-alu {
+    grid-area: left;
+    height: 70%;
+    width: 100%;
+    margin-top: -30px;
+    margin-left: 10px;
+}
+
+.left-multiplicant {
+    grid-area: left;
+    height: 70%;
+    width: 100%;
+    margin-top: -70px;
+    transform: rotate(17deg);
+    margin-left: 40px;
+}
+
+.down-multiplicant {
+    grid-area: down-multiplicant;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+
+.down-alu {
+    grid-area: down-alu;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+
+.up-product {
+    grid-area: up-product;
+    height: 70%;
+    width: 100%;
+    margin-top: 12.5px;
+}
+
+p {
+    font-weight: 900;
+}
+#divisor-view-port, #remainder-view-port,  #quotient-view-port{
+    font-size: 1.3rem;
+}
+
+#historyContainer {
+    width: 20%;
+    height: 100%;
+    background-color: rgb(192, 192, 192);
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+#historyContainer h3 {
+    text-align: center;
+}
+
+#history {
+    padding: 0 12px 12px 32px;
+    margin: 0;
+    flex-grow: 1;
+    overflow-y: scroll;
+}
+
+.historyItem {
+    margin-bottom: 16px;
 }
