--- a/pages/multiplier/style.css
+++ b/pages/multiplier/style.css
@@ -76,6 +76,7 @@ body {
 
 .alu {
     grid-area: alu;
+    position:relative;
     clip-path: polygon(49% 32%, 60% 0, 100% 0, 78% 100%, 25% 100%, 0 0, 36% 0);
     width: 100%;
     height: 100%;
@@ -86,6 +87,16 @@ body {
     align-items: center;
     margin: 0%;
     padding: 0%;
+}
+
+.inside-alu {
+    position:absolute;
+    top: 3%;
+    left: 3%;
+    right: 3%;
+    bottom: 3%;
+    background-color:orange;
+    clip-path: polygon(49% 32%, 60% 0, 100% 0, 78% 100%, 25% 100%, 0 0, 36% 0);
 }
 
 #do {
@@ -196,6 +207,7 @@ p {
 }
 
 .active {
+    --clr-primary: black;
     position: relative;
-    border: .3rem solid black;
+    box-shadow: 0 0 .4rem 0.2rem var(--clr-primary);
 }
