--- a/style.css
+++ b/style.css
@@ -1,35 +1,37 @@
-body {
-    display: grid;
-    justify-self: center;
-    height: 100vh;
-    background-color: rgb(234, 231, 231);
-}
-.container{
-    
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;    
+* {
+    box-sizing: border-box;
 }
 
-form {
-    width: 70vw;
-    height: 50vh;
+body {
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    display: grid;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgb(234, 231, 231);
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;  
+    padding: 16px;  
+}
+
+.form {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    gap: 5rem;
+    gap: 4rem;
     border: 1px solid black;
-    padding: 10rem;
+    padding: 4rem;
     background: linear-gradient(110deg, rgb(144, 144, 144) 60%, silver 60%);
-}
-.form-center{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
     text-align: center;
 }
 
