--- a/pages/multiplier-optimized/style.css
+++ b/pages/multiplier-optimized/style.css
@@ -5,10 +5,8 @@
 body {
     display: grid;
     justify-content: center;
-    background-color: rgb(234, 231, 231);
     padding: 0;
     margin: 0;
-    background-color: lightgray;
 }
 
 .container {
@@ -17,13 +15,15 @@ body {
     padding: 16px;
     width: 100vw;
     height: 100vh;
+    background-color: #95B9C7;
 }
 
 .multiplierContainer {
-    background: linear-gradient(110deg, rgb(144, 144, 144) 60%, silver 60%);
+    background: linear-gradient(110deg, #659EC7 60%, #0000A5);
     width: 80%;
     height: 100%;
-    border: solid 1px black;
+    border: solid 1px #0000A5;
+    border-radius: 1rem;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -40,7 +40,8 @@ body {
 
 .multiplicant {
     grid-area: multiplicant;
-    background-color: rgb(97, 95, 95);
+    background-color: #1F45FC;
+    border-radius: 1rem;
     display: flex;
     place-items: center;
     flex-direction: column;
@@ -51,7 +52,8 @@ body {
 
 .product {
     grid-area: product;
-    background-color: rgb(97, 95, 95);
+    background-color: #1F45FC;
+    border-radius: 1rem;
     display: flex;
     justify-content: center;
     place-items: center;
@@ -60,7 +62,7 @@ body {
 
 .control {
     grid-area: control;
-    background-color: rgb(97, 95, 95);
+    background-color: #1F45FC;
     display: flex;
     justify-content: center;
     place-items: center;
@@ -71,34 +73,37 @@ body {
 
 .alu {
     grid-area: alu;
-    clip-path: polygon(50% 33%, 60% 0, 100% 0, 78% 100%, 25% 100%, 0 0, 40% 0);
     width: 100%;
     height: 100%;
-    background-color: rgb(97, 95, 95);
+    fill: #1F45FC;
     display: flex;
     justify-content: center;
     place-items: center;
-    align-items: center;
     margin: 0%;
     padding: 0%;
+}
+.alu p {
+    position: absolute;
 }
 
 #do {
     grid-area: step;
-    background-color: silver;
+    background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
+    border: 2px solid #0000A5;
 }
 
 #undo {
     grid-area: undo;
-    background-color: silver;
+    background-color: #659EC7;
     margin: 1rem 0 1rem 0;
     border-radius: 1rem;
+    border: 2px solid #0000A5;
 }
 #do:hover, #undo:hover{
-    background-color: rgb(79, 77, 77);
-    border: 2px solid rgb(0, 0, 0);
+    background-color: #1F45FC;
+    border: 2px solid #0000A5;
 }
 .left-control {
     grid-area: left;
@@ -169,8 +174,9 @@ p {
 #historyContainer {
     width: 20%;
     height: 100%;
-    background-color: rgb(192, 192, 192);
-    border: 1px solid black;
+    background-color: #659EC7;
+    border-radius: 1rem;
+    border: 1px solid #0000A5;
     display: flex;
     flex-direction: column;
 }
