--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     display: grid;
     height: 100vh;
     width: 100vw;
-    background-color: rgb(234, 231, 231);
+    background-color: #95B9C7;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -27,9 +27,10 @@ body {
     justify-content: center;
     align-content: center;
     gap: 4rem;
-    border: 1px solid black;
+    border: 1px solid #0000A5;
+    border-radius: 1rem;
     padding: 4rem;
-    background: linear-gradient(110deg, rgb(144, 144, 144) 60%, silver 60%);
+    background: linear-gradient(110deg, #659EC7 60%, #0000A5);
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -47,13 +48,20 @@ body {
 }
 
 .form-button {
+    background-color: #95B9C7;
     padding: 0.5rem;
     border-radius: .8em;
+    border: 1px solid #0000A5;
 }
 .form-button:hover{
-    background-color: rgb(79, 77, 77);
+    background-color: #1F45FC;
 }
 
 .input {
     font-size: 1rem;
+}
+#type, #first-operand, #second-operand{
+    border:1px solid #0000A5;
+    background-color: #95B9C7;
+    border-radius: .5rem;
 }
