--- a/pages/multiplier/style.css
+++ b/pages/multiplier/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: monospace;
 }
 
 body {
@@ -19,7 +20,7 @@ body {
 }
 
 .multiplierContainer {
-    background: linear-gradient(110deg, #659EC7 60%, #0000A5);
+    background-color: #659EC7;
     border-radius: 1rem;
     width: 80%;
     height: 100%;
