--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    font-family: monospace;
 }
 
 body {
@@ -30,7 +31,7 @@ body {
     border: 1px solid #0000A5;
     border-radius: 1rem;
     padding: 4rem;
-    background: linear-gradient(110deg, #659EC7 60%, #0000A5);
+    background-color: #659EC7;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
