Fiexed reset, finished conclude for divider and multiplier and finished all animations for optimised multiplier

--- a/pages/multiplier-optimized/style.css
+++ b/pages/multiplier-optimized/style.css
@@ -215,3 +215,14 @@ p {
     margin-bottom: 16px;
 }
 
+.active {
+    --animation-primary: white;
+    filter: drop-shadow(0 0 1rem var(--animation-primary));
+}
+
+.active-span {
+    --animation-primary: red;
+    border: 1px solid var(--animation-primary);
+    border-radius: 100vmax;
+}
+
